去掉 Requirements.txt 中多余的行

--- a/visualization.html
+++ b/visualization.html
@@ -65,7 +65,7 @@
     <h2>累计人生意义趋势</h2>
     <svg id="cumulative-life-meaning-trend" width="900" height="500"></svg>
 
-    <h2>每个价值目标的认证意义贡献</h2>
+    <h2>每个价值目标的人生意义贡献</h2>
     <svg id="value-goal-contribution" width="900" height="500"></svg>
 
     <h2>每个价值目标的累计人生意义贡献</h2>
