正确将生命周期阶段写入可视化数据文件

--- a/visualization.html
+++ b/visualization.html
@@ -771,7 +771,7 @@
         function getLifeStage(value, total) {
             const ratio = value / total;
             if (ratio > 0.3) return "核心价值";
-            if (ratio > 0.2) return "重要目標";
+            if (ratio > 0.2) return "重要目标";
             if (ratio > 0.1) return "成長領域";
             return "探索方向";
         }
@@ -837,7 +837,7 @@
         }
 
         // 正常继续初始化图表...
-        console.log('数据加载成功', data);
+        console.log('データ加载成功', data);
         // 此处调用你的图表绘制函数，例如 drawLineChart(data), drawPieChart(data) 等
     }
 
